Refactor API endpoints to follow RESTful principles, implemented mongomock on collection, updated tests to match with rest changes, updated docs
